Fix: played with the spacing on nav

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -71,8 +71,8 @@ h3 {
 }
 	
 .marg {
-	width: 60%;
 	margin:auto;
+
 	}
 
 .navicon {
